--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,7 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="./app.js"></script>
 </body>
 
