--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&family=Poppins:wght@200;300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400&family=Poppins:wght@200;300;400;500;600&display=swap"
         rel="stylesheet">
 </head>
 
@@ -130,6 +130,7 @@
                     <p class="text-center text-red-500 font-bold">É necessário um e-mail válido, pois enviaremos a
                         planilha em anexo no e-mail.</p>
                 </div>
+                <div class="text-center text-green-700 text-xl font-medium mt-5" id="successAlert"></div>
                 <div class="px-6 py-6 lg:px-8">
                     <form class="space-y-6" action="" method="post" id="formDemo">
                         <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col gap-1">
@@ -160,7 +161,7 @@
         class="fixed top-0 left-0 right-0 z-50 hidden w-auto p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-auto md:h-auto bg-opacity-50 font-poppins">
         <div class="relative w-full h-full max-w-lg md:h-auto">
             <div class="relative lg:w-[150%] md:w-[150%] sm:w-full xs:w-full lg:ml-[-25%] md:ml-[-25%] sm:ml-0 xs:ml-0 aspect-video bg-white rounded-lg shadow p-4">
-                <button type="button"
+                <button type="button" onclick="stop()"
                     class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
                     data-modal-hide="video-modal">
                     <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -175,14 +176,13 @@
                     <iframe class="w-full h-full" width="" height="" src="https://www.youtube.com/embed/ZEmnEUx18iQ"
                         title="Vídeo Planilha Fluxo de Caixa Pro" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen loading="lazy"></iframe>
+                        allowfullscreen loading="lazy" id="videoDemo"></iframe>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="sm:inline-block xs:inline-block md:hidden lg:hidden xl:hidden p-3 left-0 right-0 leading-tight rounded-full shadow-md bottom-0 w-full mx-0 fixed z-10"
-        id="btn-back-to-top">
+    <div class="sm:inline-block xs:inline-block md:hidden lg:hidden xl:hidden p-3 left-0 right-0 leading-tight rounded shadow-md bottom-0 w-full mx-0 fixed z-10">
         <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP"
             class="sm:relative xs:relative md:hidden lg:hidden xl:hidden ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl">
             <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
@@ -267,10 +267,10 @@
                         criar o controle da sua empresa. Temos uma planilha pronta!</p>
                     <div class="flex mt-6 w-full justify-center mb-10">
                         <div
-                            class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
+                            class="mt-12 -ml-1 flex w-full flex-1 space-y-2 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <a href="https://seguro.zeplanilha.com/r/ABE0WSGLNP"
-                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl">
-                                <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
+                                class="relative ml-auto flex lg:h-16 md:h-16 sm:h-10 xs:h-10 lg:w-full md:w-full sm:w-36 xs:w-36 items-center justify-center before:absolute before:inset-0 before:rounded before:bg-[#4ed199] before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-[#4ed199]/90 lg:before:bg-[#4ed199] shadow-xl lg:text-sm md:text-sm sm:text-xs xs:text-xs">
+                                <span class="relative flex items-center font-semibold text-black lg:text-black">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                         stroke-width="1.5" stroke="currentColor" class="w-5 h-5 mr-2">
                                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -281,11 +281,11 @@
                             </a>
                         </div>
                         <div
-                            class="mt-12 -ml-1 flex w-full flex-1 flex-col space-y-2 border-primary/10 sm:flex-row md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
+                            class="mt-12 -ml-1 flex w-full flex-1 space-y-2 border-primary/10 md:w-max lg:mt-0 lg:mr-6 lg:space-y-0 lg:pl-6">
                             <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
                                 type="button"
-                                class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200 shadow-xl">
-                                <span class="relative flex items-center text-sm font-semibold text-black lg:text-black">
+                                class="relative ml-auto flex lg:h-16 md:h-16 sm:h-10 xs:h-10 lg:w-full md:w-full sm:w-36 xs:w-36 items-center justify-center before:absolute before:inset-0 before:rounded before:bg-gray-200 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-gray-300 lg:before:bg-gray-200 shadow-xl lg:text-sm md:text-sm sm:text-xs xs:text-xs">
+                                <span class="relative flex items-center font-semibold text-black lg:text-black">
                                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                                         class="w-5 h-5 mr-2">
                                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -517,19 +517,19 @@
     </section>
 
     <section class="lg:py-24 max-lg:py-20 sm:py-10 xs:py-5">
-        <div
-            class="flex lg:flex-row px-10 lg:justify-between xs:flex-col sm:justify-center sm:items-center font-poppins items-center mt-16">
-            <div>
-                <p class="font-semibold lg:text-4xl xs:text-xl text-center text-gray-900">Mais de 8 anos desenvolvendo
-                    soluções em
-                    excel</p>
+            <div
+                class="flex lg:flex-row px-10 justify-center xs:flex-col sm:items-center font-poppins items-center mt-16">
+                <div>
+                    <p class="font-semibold lg:text-4xl xs:text-xl lg:text-start md:text-start sm:text-center xs:text-center text-gray-900">Mais de 8 anos desenvolvendo
+                        soluções em
+                        excel</p>
+                </div>
+                <div class="flex flex-col lg:text-start md:text-start sm:text-center xs:text-center lg:ml-20 md:ml-16 sm:ml-0 xs:ml-0">
+                    <span
+                        class="font-semibold lg:text-7xl md:text-6xl xs:text-5xl text-center xs:mt-4 text-green-500">1200+</span>
+                    <span class="lg:text-lg sm:text-sm font-semibold text-gray-700 text-center">Clientes atendidos</span>
+                </div>
             </div>
-            <div class="flex flex-col">
-                <span
-                    class="font-semibold lg:text-7xl md:text-6xl xs:text-5xl text-center xs:mt-4 text-green-500">1200+</span>
-                <span class="lg:text-lg sm:text-sm font-semibold text-gray-700 text-center">Clientes atendidos</span>
-            </div>
-        </div>
         <div>
             <p></p>
         </div>
@@ -596,7 +596,7 @@
     </section>
 
     <section class="py-20">
-        <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0 lg:border-white md:border-white sm:border-gray-100 xs:border-gray-100 lg:bg-white md:bg-white sm:bg-gray-100 xs:bg-gray-100 sm:rounded xs:rounded sm:mx-3 xs:mx-3 lg:shadow-none md:shadow-none sm:shadow-xl xs:shadow-xl sm:py-5 xs:py-5">
+        <div class="lg:mx-auto md:mx-auto px-4 sm:px-12 xl:max-w-6xl lg:border-white md:border-white sm:border-gray-100 xs:border-gray-100 lg:bg-white md:bg-white sm:bg-gray-100 xs:bg-gray-100 sm:rounded xs:rounded sm:mx-3 xs:mx-3 lg:shadow-none md:shadow-none sm:shadow-xl xs:shadow-xl sm:py-5 xs:py-5 flex justify-center">
             <div class="space-y-6 md:flex lg:items-center lg:gap-6 lg:space-y-0">
                 <div class="md:4/12 lg:w-5/12">
                     <h3 class="sm:text-2xl xs:text-2xl font-bold text-gray-800 md:text-3xl lg:text-4xl font-poppins">
@@ -617,7 +617,7 @@
     </section>
 
     <section class="lg:py-32 sm:py-16 xs:py-16">
-        <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0 lg:border-white md:border-white sm:border-gray-100 xs:border-gray-100 lg:bg-white md:bg-white sm:bg-gray-100 xs:bg-gray-100 sm:rounded xs:rounded sm:mx-3 xs:mx-3 lg:shadow-none md:shadow-none sm:shadow-xl xs:shadow-xl sm:pb-5 xs:pb-5">
+        <div class="lg:mx-auto md:mx-auto px-4 sm:px-12 xl:max-w-6xl lg:border-white md:border-white sm:border-gray-100 xs:border-gray-100 lg:bg-white md:bg-white sm:bg-gray-100 xs:bg-gray-100 sm:rounded xs:rounded sm:mx-3 xs:mx-3 lg:shadow-none md:shadow-none sm:shadow-xl xs:shadow-xl sm:pb-5 xs:pb-5">
             <div
                 class="space-y-6 flex xs:flex-col-reverse md:flex-row lg:flex-row lg:items-center lg:gap-6 lg:space-y-0">
                 <div class=" flex justify-start md:9/12 lg:w-8/12">
@@ -1251,7 +1251,7 @@
         </div>
     </section>
 
-    <footer class="border-t border-gray-100 pt-32 pb-8 font-poppins">
+    <footer class="border-t border-gray-100 pt-32 pb-8 font-poppins lg:mx-auto md:mx-auto sm:mx-auto xs:mx-auto">
         <div>
             <div
                 class="flex lg:flex-row md:flex-col sm:flex-col xs:flex-col lg:justify-between md:justify-center sm:justify-center xs:justify-center lg:mx-32 md:mx-24 sm:mx-10 xs:mx-10 mb-20">
@@ -1309,6 +1309,7 @@
 
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="./app.js"></script>
+    <script src="./src/js/video.js"></script>
 </body>
 
 </html>
