--- a/index.html
+++ b/index.html
@@ -1004,22 +1004,73 @@
     </section>
 
     <section class="lg:pt-24 md:pt-24 sm:pt-2 xs:pt-2">
-        <div class="flex flex-col justify-center items-center text-center">
-            <p class="lg:text-4xl md:text-3xl sm:text-2xl xs:text-2xl text-gray-800 font-bold font-poppins mb-10">Já
+        <div class="flex flex-col justify-center items-center text-center font-poppins">
+            <p class="lg:text-4xl md:text-3xl sm:text-2xl xs:text-2xl text-gray-800 font-bold mb-10">Já
                 estou convencido, quero comprar!</p>
-            <div class=" -ml-1 flex flex-1 flex-col space-y-2 sm:flex-row md:w-max lg:mr-6 lg:space-y-0 lg:pl-6">
-                <a href="" id="buyBtnFinal"
-                    class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-green-300 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-green-400 lg:before:bg-green-300 font-manrope">
-                    <span class="relative flex items-center text-md font-bold text-black px-6">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-5 h-5 mr-2">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-                        </svg>
-                        Comprar Planilha
-                    </span>
-                </a>
-            </div>
+                <div class="m-auto items-center justify-center flex shadow-2xl">
+                    <div class="relative z-10 -mx-2 rounded-3xl border border-gray-100 bg-white shadow-2xl shadow-gray-600/10 md:mx-0 max-w-lg">
+                        <div class="space-y-6 p-8 sm:p-12">
+                            <div class="flex items-center justify-center gap-4">
+                                <div>
+                                    <h3 class="lg:text-3xl md:text-3xl sm:text-2xl xs:text-2xl font-semibold text-gray-800 drop-shadow-lg shadow-black mb-5">Fluxo de Caixa <span class="lg:text-4xl md:text-4xl sm:text-3xl xs:text-3xl">PRO</span></h3>
+                                </div>
+                            </div>
+                            <div class="relative flex justify-around">
+                                <div class="flex items-end">
+                                    <div class="pb-2">
+                                        <span class="block lg:text-2xl md:text-2xl sm:text-xl xs:text-xl font-bold text-gray-600">R$</span>
+                                    </div>
+                                    <span class="leading-0 lg:text-7xl md:text-6xl sm:text-5xl xs:text-5xl font-bold text-gray-800">325</span>
+                                </div>
+                            </div>
+                            <ul role="list" class="m-auto space-y-4 py-6 text-gray-600">
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>7 Dashboards!</span>
+                                </li>
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>Projeção futura de valores</span>
+                                </li>
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>DRE pronto</span>
+                                </li>
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>Armazenamento de dados de 2020 a 2030</span>
+                                </li>
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>Filtros por: ano, conta bancária, centro de custo, forma de pagamento</span>
+                                </li>
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>Fluxo de Caixa Mensal e Diário (a básica também tem esse recurso)</span>
+                                </li>
+                                <li class="space-x-2">
+                                    <span class="font-semibold text-gray-500">&check;</span>
+                                    <span>Detalhamento de despesas e receitas</span>
+                                </li>
+                            </ul>
+                            <div class="flex justify-center">
+                                <div class="flex flex-1 flex-col space-y-2 sm:flex-row md:w-max lg:space-y-0">
+                                    <a href="" id="buyBtnFinal"
+                                        class="relative ml-auto flex h-16 w-full items-center justify-center before:absolute before:inset-0 before:rounded before:bg-green-300 before:transition-transform before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:px-4 lg:before:border lg:before:border-green-400 lg:before:bg-green-300 font-manrope">
+                                        <span class="relative flex items-center text-md font-bold text-black px-6">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                                stroke="currentColor" class="w-5 h-5 mr-2">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                            </svg>
+                                            Comprar Planilha
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
         <div class="mx-auto mt-24 px-4 sm:px-12 xl:max-w-5xl xl:px-0 font-poppins">
             <h2 class="mb-12 text-center text-3xl font-bold text-gray-800 md:text-4xl">Perguntas Frequentes</h2>
