--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <meta name="title" content="Planilha Fluxo de Caixa PRO - Controle suas finanças com facilidade - Zé Planilha" />
     <meta name="description" content="Simplifique a gestão do seu dinheiro com a Planilha Fluxo de Caixa PRO. Registre suas entradas e saídas de forma organizada e tenha uma visão clara da sua situação financeira. Experimente agora!" />
     <title>Zé Planilha - Planilha Fluxo de Caixa</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-TCR5WHF');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body class="min-h-screen bg-white selection:bg-primary/10 selection:text-primary">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TCR5WHF"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="font-manrope">
         <nav id="navbar" class="fixed inset-x-0 z-50 w-full border-b border-gray-100 bg-white/80 backdrop-blur">
             <div class="mx-auto px-4 sm:px-12 xl:max-w-6xl xl:px-0">
